# geojson-fastapi

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml
project/: config.py
project/api/: main.py
project/api/routes/: partner_routes.py
project/dal/: __init__.py  mongo_connection.py  partner_dal.py  partner_repository.py
project/database/migration/: env.py
project/domain/address/: model.py
project/domain/partner/: base_partner_repository.py  model.py  partner_service.py
project/libs/: geometry.py
scripts/: drop_db.py  seed_db.py
scripts/resources/: pdvs.json
test/helpers/factories/: mongo_reponses_factory.py  partner_factory.py
test/integration/: conftest.py  test_partner_routes.py
test/unit/domain/: test_partner_service.py
test/unit/libs/geometry/: test_geometry.py
