[tool.poetry]
name = "geojson-playground"
version = "0.1.0"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.62.0"
pydantic = "^1.7.3"
mypy = "^0.790"
dynaconf = "^3.1.2"
geojson-pydantic = "^0.2.1"
motor = "^2.3.0"
uvicorn = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
factory-boy = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
startapi = "project.api.main:run"